phpAdsNew - ChangeLog


SVN
			+ Misc changes
			  - 2007-01-26:  Fixed #17  - Remove deprecated fakecron script, automaintenance should be used instead  (Matteo)
			  - 2007-01-26:  Fixed #55  - Add delivery limitation by page URL  (Matteo)
			  - 2007-02-02:  Fixed #110 - Add Japanese translations  (Matteo)
			  - 2007-02-27:  Fixed #168 - Implement context sensitive help links  (Marek)
			  - 2007-03-02:  Fixed #62  - Change delivery scripts to be XHTML compliant  (Marek)

			+ Misc bugfixes
			  - 2007-01-26:  Fixed #61  - IE warnings appear when SWF banners are served through SSL  (Matteo)
			  - 2007-01-29:  Fixed #53  - Logging to compact stats may fail under heavy load, losing a few impressions  (Matteo)
			  - 2007-01-29:  Fixed #58  - Multiple XML-RPC invocation codes failing  (Matteo)
			  - 2007-01-31:  Fixed #78  - Bug in phpAds_dbConnect that can cause page rendering to hang  (Matteo)
			  - 2007-01-31:  Fixed #63  - Resource files may trigger an Undefined index notice  (Matteo)
			  - 2007-02-10:  Fixed #132 - Update ISO 3666-1 codes  (Matteo)


Openads 2.0.11
			+ Misc bugfixes
			  - 2007-01-22:  Fixed #50 - Stats conversion isn't working on some browsers  (Matteo)
			  - 2007-01-22:  Fixed #45 - Automaintenance could be triggered twice on Netscape 4 or even if it's disabled  (Matteo)
			  - 2007-01-22:  Fixed #52 - Endless loop in lib-view-query.inc.php under some circumstances  (Matteo)
			  - 2007-01-24:  Fixed #56 - Avoid multiple requests of adg.js when more adsense banners are delivered in the same page  (Matteo)

Openads 2.0.10
			+ Misc changes
			  - 2007-01-03:  Maintenance task now is performed during banner delivery if a cron job isn't correctly set up. The new feature is enabled by default and can be disabled in the administrator settings screen  (Matteo)
			  - 2007-01-09:  Added remote logo in the admin interface so that logo is automatically updated in case of name changes  (Matteo)