@@ -1,4 +1,4 @@
-phpAdsNew - ChangeLog
+Openads 2.0 - ChangeLog
 
 
 SVN
@@ -16,6 +16,7 @@ SVN
 			  - 2007-01-31:  Fixed #78  - Bug in phpAds_dbConnect that can cause page rendering to hang  (Matteo)
 			  - 2007-01-31:  Fixed #63  - Resource files may trigger an Undefined index notice  (Matteo)
 			  - 2007-02-10:  Fixed #132 - Update ISO 3666-1 codes  (Matteo)
+			  - 2007-03-22:  Fixed #249 - Wrong deactivation cause displayed in campaign-edit.php  (Matteo)
 
 
 Openads 2.0.11
